# PacAgent

./: .coverage.zmideapad.pid20508.XVAcT7sx.HNQIp837rWOh  .coverage.zmideapad.pid20508.Xnuv5UWx.HNQIp837rWOh  .coverage.zmideapad.pid22376.Xf0MhMTx.HNQIp837rWOh  .coverage.zmideapad.pid24780.X5v70dox.HNQIp837rWOh  .coverage.zmideapad.pid41000.Xw0HR86x.HNQIp837rWOh  ACTION_PLAN.md  CHANGELOG.md  CONTRIBUTING.md  GROWTH_PLAN_SUMMARY.md  IMPLEMENTATION_PLAN.md  MANIFEST.in  QUICK_WINS_CHECKLIST.md  README.md  USAGE.md  VSCODE_EXTENSION_PLAN.md  WORD_OF_MOUTH_STRATEGY.md  agent.py  backpack.py  check_path.py  coverage.xml  perf_test.py  pyproject.toml  pytest.ini  test_cloud_run.py  test_log.txt
.trae/documents/: Remaining Tasks for PacAgent Project.md
demos/: demo_script.py
docs/: USAGE.md
examples/: README.md  basic_agent.py  integration_langchain.py  multi_key_agent.py  stateful_agent.py  team_agent.py
src/: __init__.py  agent_lock.py  cli.py  crypto.py  exceptions.py  keychain.py
src/backpack/: __init__.py  agent_lock.py  cli.py  crypto.py  exceptions.py  keychain.py
src/backpack/templates/code_reviewer/: README.md  agent.py  manifest.json
src/backpack/templates/financial_analyst/: README.md  agent.py  manifest.json
src/backpack/templates/twitter_bot/: README.md  agent.py  manifest.json
test_cloud_env/: agent_env.py  agent_lock.py
tests/: README.md  test_agent_lock.py  test_audit.py  test_cli.py  test_cli_coverage.py  test_coverage_improvements.py  test_crypto.py  test_exceptions.py  test_keychain.py
vscode-extension/: README.md  backpack.code-workspace  package-lock.json  package.json
vscode-extension/src/: backpackCli.ts  backpackCodeLensProvider.ts  backpackTreeDataProvider.ts  extension.ts
