[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backpack-agent"
version = "0.1.3"
description = "Secure, portable system for managing AI agents with encrypted state, credentials, and personality configurations"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Backpack Contributors"}
]
keywords = [
    "ai",
    "agent",
    "encryption",
    "credentials",
    "keychain",
    "security",
    "llm",
    "ai-agent"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "cryptography>=41.0.7",
    "keyring>=24.3.0",
    "click>=8.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/ASDevLLM/PacAgent"
Documentation = "https://github.com/ASDevLLM/PacAgent#readme"
Repository = "https://github.com/ASDevLLM/PacAgent"
Issues = "https://github.com/ASDevLLM/PacAgent/issues"

[project.scripts]
backpack = "backpack.cli:cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["backpack*"]
exclude = ["*__pycache__*", "backpack.templates*"]
namespaces = false

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]
"backpack" = ["templates/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 120
target-version = "py37"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
